--- a/sfg-pet-web/src/main/resources/templates/owners/index.html
+++ b/sfg-pet-web/src/main/resources/templates/owners/index.html
@@ -6,5 +6,22 @@
 </head>
 <body>
 <h1 th:text="'List of pet owners'">List of pet owners</h1>
+
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner: ${owners}">
+            <td th:text="${owner.id}">1</td>
+            <td th:text="${owner.firstName}">Joe</td>
+            <td th:text="${owner.lastName}">Buck</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
